tests/invalid/06_unclosed_brace.js
// 错误6: 未闭合的大括号
if (true) {
    console.log("test");
